# image_drift_generator

./: .gitignore  .settings  Makefile  README.md  pyproject.toml
data/places/places_generated/: embeddings.parquet  input_mapping.parquet  target.parquet
image_drift_generator/: embedder.py  enums.py  image_factory.py  image_generator.py  images.py  models.py
notebooks/: img_generator_test.ipynb
scripts/: image_factory.py  image_generator.py
utils/: plots.py  singleton.py  stats.py
utils/settings/: __init__.py  settings.py  settings_provider.py  stats.py
