[project]
name = "image_drift_generator"
version = "0.0.0"
authors = [{ name = "Cristian" }]
description = "Image Drift Generator"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "setuptools>=75.6.0",
    "llmx>=0.0.21a0",
    "pydantic>=2.10.3",
    "types-pyyaml>=6.0.12.20241230",
    "scikit-learn>=1.5.2",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "polars>=1.22.0",
    "plotly>=6.0.0",
    "python-dotenv>=1.0.1",
    "opencv-python>=4.11.0.86",
    "pydantic-settings>=2.7.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.0",
]

# list of project dev dependencies
[project.optional-dependencies]

torch = [
    "torch==2.4.0+cu124 ; platform_system == 'Windows'",
    "torch==2.4.0 ; platform_system != 'Windows'",
    "torchvision==0.19.0+cu124 ; platform_system == 'Windows'",
    "torchvision==0.19.0 ; platform_system != 'Windows'",
]

image = [
    "torch==2.4.0+cu124 ; platform_system == 'Windows'",
    "torch==2.4.0 ; platform_system != 'Windows'",
    "torchvision==0.19.0+cu124 ; platform_system == 'Windows'",
    "torchvision==0.19.0 ; platform_system != 'Windows'",
]


[dependency-groups]
build = [
    "build>=1.2.2.post1",
    "twine>=6.1.0",
]
dev = [
    "mypy>=1.15.0",
    "jupyter>=1.1.1",
    "ipykernel>=6.29.5",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.25.3",
    "ruff>=0.9.6",
]

### INDEXES

[tool.uv.sources]
torch = { index = "pytorch-gpu", marker = "platform_system == 'Windows'" }
torchvision = { index = "pytorch-gpu", marker = "platform_system == 'Windows'" }

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "default_pypy"
url = "https://pypi.org/simple/"
default = true

### BUILD

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["notebooks"]
